objects/EM_Event_Email_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attach_Delegate_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this option if you want to attach a PDF file containing the delegate&apos;s event schedule.</inlineHelpText>
        <label>Attach Delegate Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attach_Speaker_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attach Speaker Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <label>Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delegate_Attendance_Status__c</fullName>
        <label>Delegate Attendance Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delegate_Attendance_Statuses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delegate_Invitation_Status__c</fullName>
        <label>Delegate Invitation Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delegate_Invitation_Statuses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delegate_RSVP_Status__c</fullName>
        <label>Delegate RSVP Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delegate_RSVP_Statuses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delegate_Registration_Status__c</fullName>
        <label>Delegate Registration Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delegate_Registration_Statuses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delegate_Status__c</fullName>
        <label>Delegate Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Partially Attended</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
                <value>
                    <fullName>Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delegate_Type__c</fullName>
        <defaultValue>&quot;All&quot;</defaultValue>
        <description>Allows user the option to by delegate record type</description>
        <label>Delegate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Attendee</fullName>
                </value>
                <value>
                    <fullName>Invitee</fullName>
                </value>
                <value>
                    <fullName>Registrant</fullName>
                </value>
                <value>
                    <fullName>Speaker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delegate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Specify a single Delegate to send to just a single Delegate (eg: for testing purposes)</inlineHelpText>
        <label>Delegate</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Delegate__c.Event__c</field>
                <operation>equals</operation>
                <valueField>$Source.Event__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Delegate__c</referenceTo>
        <relationshipName>Event_Email_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_Before__c</fullName>
        <label>Do Not Send Before</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Setup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Email Setup</label>
        <referenceTo>Email_Setup__c</referenceTo>
        <relationshipName>Event_Email_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name__c</fullName>
        <label>Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <formula>Event__r.End_Date__c</formula>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Event Email Schedules</relationshipLabel>
        <relationshipName>Event_Email_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <inlineHelpText>A short meaningful name for this message</inlineHelpText>
        <label>Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Run__c</fullName>
        <label>Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMS_Text__c</fullName>
        <inlineHelpText>The content allows substitution of &lt;EventName&gt;, &lt;FirstName&gt; and &lt;DelegateID&gt;
Messages longer than 180 characters (after substitution) will use multi-part SMS messages and incur additional costs</inlineHelpText>
        <label>SMS Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMS__c</fullName>
        <label>SMS</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_From_Name__c</fullName>
        <label>Send From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_From__c</fullName>
        <label>Send From</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Window__c</fullName>
        <inlineHelpText>The period in days since the trigger date during which this email will be sent.  If blank then default is 7 days</inlineHelpText>
        <label>Send Window</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Before_After__c</fullName>
        <label>Start Before/After</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Before Start Date</fullName>
                </value>
                <value>
                    <fullName>After Start Date</fullName>
                </value>
                <value>
                    <fullName>Before End Date</fullName>
                </value>
                <value>
                    <fullName>After End Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Days__c</fullName>
        <label>Start Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Send_Date__c</fullName>
        <inlineHelpText>The date from which this scheduled email will be sent,  Leave blank to have no start date limit</inlineHelpText>
        <label>Start Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Send_Time__c</fullName>
        <inlineHelpText>Messages will not be sent before this time of the day.  Blank means any time.</inlineHelpText>
        <label>Start Send Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times_for_Event</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop_Before_After__c</fullName>
        <label>Stop Before/After</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Before Start Date</fullName>
                </value>
                <value>
                    <fullName>After Start Date</fullName>
                </value>
                <value>
                    <fullName>Before End Date</fullName>
                </value>
                <value>
                    <fullName>After End Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop_Days__c</fullName>
        <label>Stop Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stop_Send_Date__c</fullName>
        <inlineHelpText>The date up to which this scheduled email will be sent,  Leave blank to have no end date limit</inlineHelpText>
        <label>Stop Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stop_Send_Time__c</fullName>
        <inlineHelpText>Message will not be sent after this time of the day.  Leave blank for no restrictions</inlineHelpText>
        <label>Stop Send Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Times_for_Event</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Status__c</fullName>
        <label>Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Completed</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invitation</fullName>
                </value>
                <value>
                    <fullName>Confirmation</fullName>
                </value>
                <value>
                    <fullName>Reminder</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event Email Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Event__c</columns>
        <columns>Active__c</columns>
        <columns>Last_Run__c</columns>
        <columns>Send_From_Name__c</columns>
        <columns>Send_From__c</columns>
        <columns>Email_Template_Name__c</columns>
        <columns>Email_Template__c</columns>
        <columns>Do_Not_Send_Before__c</columns>
        <columns>Delegate__c</columns>
        <columns>Delegate_Status__c</columns>
        <columns>Survey_Status__c</columns>
        <columns>SMS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC{00000}</displayFormat>
        <label>Schedule Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Email Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>